# gtest-memleak-detector

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  LICENSE  README.md  appveyor.yml  build.bat  setenv.bat
cmake/: gtest_memleak_detector_compiler.cmake
example/: CMakeLists.txt
example/01_getting_started/: CMakeLists.txt  main.cpp
include/gtest_memleak_detector/: gtest_memleak_detector.h
src/: CMakeLists.txt  memory_leak_detector.cpp  memory_leak_detector.h  memory_leak_detector_listener.cpp  memory_leak_detector_listener_impl.cpp  memory_leak_detector_listener_impl.h  memory_leak_detector_stacktrace.cpp
test/: CMakeLists.txt  main.cpp  memory_leak_detector_assertion_tests.cpp  memory_leak_detector_coexistence_test.cpp  memory_leak_detector_crtdbg_coexistence_test.cpp  memory_leak_detector_helper_tests.cpp  memory_leak_detector_impl_test.cpp  memory_leak_detector_listener_assertion_test.cpp  memory_leak_detector_listener_coexistence_test.cpp  memory_leak_detector_listener_test.cpp  memory_leak_detector_listener_test.h  memory_leak_detector_test.cpp  memory_leak_detector_test.h
